--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
-.body {
-    text-align: center;
-}
+.body {}
 
 .content {
     margin: 1% auto 1% auto;
-    width: 40%;
-    min-height: 100%;
+    width: 60%;
+    height: 60%;
+    padding-left: 2%;
+    padding-top: 1%;
 }
+
+.image {}
