--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     margin: 1% auto 1% auto;
     width: 60%;
     height: 60%;
-    padding-left: 2%;
-    padding-top: 1%;
+    padding-left: 10%;
+    padding-top: 3%;
+}
+
+.font-weight {
+    font-size: 5rem;
 }
