--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .content {
     margin: 1% auto 1% auto;
-    width: 60%;
+    width: 70%;
     min-height: 70%;
     padding-left: 10%;
     padding-top: 2%;
@@ -22,4 +22,5 @@
 .item {
     display: flex;
     font-size: 1rem;
+    padding-bottom: 2%;
 }
