--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .content {
     margin: 1% auto 1% auto;
     width: 70%;
-    min-height: 70%;
+    /* min-height: 70%; */
     padding-left: 8%;
     padding-top: 2%;
 }
@@ -22,11 +22,26 @@
 .item {
     display: flex;
     font-size: 1rem;
-    padding-bottom: 2%;
+    height: 100px;
 }
 
 .wind-speed,
 .sunrise-icon,
 .sunset-icon {
-    padding-top: 27%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+
+.icon {
+    font-size: 2rem;
+    padding-left: 10%;
+}
+
+.weather-data {
+    display: flex;
+    flex-direction: column;
+}
+
+p {
+    margin: 0;
 }
