--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+.body-color {
+    background-color: #2670AF !important;
+    width: 100%;
+    height: 100%;
+}
+
 .content {
     margin: 1% auto 1% auto;
     width: 70%;
-    /* min-height: 70%; */
     padding-left: 8%;
     padding-top: 2%;
+    color: white;
 }
 
 .font-size {
