--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 .body-color {
-    background-color: #2670AF !important;
+    background: url('../background.jpg');
+    background-size: 100% 100%;
     width: 100%;
     height: 100%;
 }
 
 .content {
-    margin: 1% auto 1% auto;
+    margin: 0% auto 0% auto;
     width: 70%;
     padding-left: 8%;
     padding-top: 5%;
@@ -28,7 +29,6 @@
 .item {
     display: flex;
     font-size: 1rem;
-    height: 100px;
 }
 
 .feels-like {
@@ -40,11 +40,9 @@ a {
     color: white;
 }
 
-.wind-speed,
-.sunrise-icon,
-.sunset-icon {
+.parameter {
     padding-top: 2%;
-    padding-left: 2%;
+    min-width: 100px;
 }
 
 .icon {
@@ -55,8 +53,14 @@ a {
 .weather-data {
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 p {
     margin: 0;
+}
+
+i {
+    text-align: center;
+    width: 100px
 }
